--- a/style.css
+++ b/style.css
@@ -44,14 +44,14 @@ section {
 
 section h2 {
   color: #b36e6e;
-  font-size: 4.5rem;
+  font-size: 5rem;
   margin-bottom: 30px;
   text-align: center;
 }
 
 section h3 {
   color: #c48e8e;
-  font-size: 3rem;
+  font-size: 3.5rem;
   margin-top: 30px;
   text-align: center;
 }
@@ -98,7 +98,7 @@ footer a {
 }
 
 .titulo-grande {
-  font-size: 3rem;
+  font-size: 3.5rem;
   color: #a05d5d;
   margin-bottom: 20px;
 }
@@ -112,7 +112,7 @@ footer a {
 }
 
 .galeria img {
-  max-width: 22%;
+  width: 23%;
   height: auto;
   border-radius: 12px;
   object-fit: cover;
@@ -154,6 +154,6 @@ footer a {
   }
 
   .galeria img {
-    max-width: 90%;
+    width: 90%;
   }
 }
