--- a/style.css
+++ b/style.css
@@ -55,7 +55,66 @@ section h3 {
   margin-top: 30px;
   text-align: center;
 }
-
+section h4 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h5 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h6 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h7 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h8 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h9 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h10 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h11 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h12 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h13 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
 p {
   font-size: 1.6rem;
   line-height: 2.2;
