--- a/style.css
+++ b/style.css
@@ -115,6 +115,30 @@ section h13 {
   margin-top: 30px;
   text-align: center;
 }
+section h14 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h15 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h16 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
+section h17 {
+  color: #c48e8e;
+  font-size: 3.5rem;
+  margin-top: 30px;
+  text-align: center;
+}
 p {
   font-size: 1.6rem;
   line-height: 2.2;
