--- a/style.css
+++ b/style.css
@@ -179,7 +179,13 @@ footer a {
   border-radius: 12px;
   margin-bottom: 60px;
 }
-
+#vinilo .producto {
+  background: #fff9f7;
+  border: 1px solid #f0dede;
+  padding: 30px;
+  border-radius: 12px;
+  margin-bottom: 60px;
+}
 .titulo-grande {
   font-size: 3.5rem;
   color: #a05d5d;
