--- a/style.css
+++ b/style.css
@@ -336,4 +336,48 @@ footer a {
   .galeria img {
     width: 90%;
   }
+.whatsapp-float,
+.social-float {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  right: 20px;
+  z-index: 999;
+}
+
+.whatsapp-float img,
+.social-float img {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+
+.whatsapp-float {
+  bottom: 20px;
+}
+
+.instagram {
+  bottom: 80px;
+}
+
+.facebook {
+  bottom: 140px;
+}
+
+.tiktok {
+  bottom: 200px;
+}
+.inicio-float {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 50px;
+  height: 50px;
+  z-index: 100;
+}
+
+.inicio-float img {
+  width: 100%;
+  height: auto;
 }
